<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".business.device.BP550BT">


    <Button
        android:id="@+id/btnDisconnect"
        style="@style/BtnDefaultStyle"
        android:text="@string/function_item_button_disconnect" />


    <TextView
        style="@style/FunctionHeadDefaultStyle"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:text="@string/function_item_title_get_information" />

    <Button
        android:id="@+id/btnFunction"
        style="@style/BtnDefaultStyle"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:text="@string/function_item_button_check_function" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnIDPS"
            style="@style/BtnDefaultStyle"
            android:layout_marginRight="@dimen/function_btn_marge_left_or_right"
            android:text="@string/function_item_button_get_idps" />

        <Button
            android:id="@+id/btnBattery"
            style="@style/BtnDefaultStyle"
            android:layout_marginLeft="@dimen/function_btn_marge_left_or_right"
            android:text="@string/function_item_button_get_battery" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSetBackLight"
            style="@style/BtnDefaultStyle"
            android:layout_marginLeft="@dimen/function_btn_marge_left_or_right"
            android:layout_marginRight="@dimen/function_btn_marge_left_or_right"
            android:text="@string/function_item_button_set_status_back_light" />

        <Button
            android:id="@+id/btnSetLocking"
            style="@style/BtnDefaultStyle"
            android:layout_marginLeft="@dimen/function_btn_marge_left_or_right"
            android:layout_marginRight="@dimen/function_btn_marge_left_or_right"
            android:text="@string/function_item_button_set_status_locking" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGetStatus"
        style="@style/BtnDefaultStyle"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:text="@string/function_item_button_get_status" />

    <TextView
        style="@style/FunctionHeadDefaultStyle"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:text="@string/function_item_title_data" />

    <Button
        android:id="@+id/btnDataNum"
        style="@style/BtnDefaultStyle"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:text="@string/function_item_button_get_offline_data_num" />

    <Button
        android:id="@+id/btnGetData"
        style="@style/BtnDefaultStyle"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:text="@string/function_item_button_get_offline_data" />

    <Button
        android:id="@+id/btnGetTime"
        style="@style/BtnDefaultStyle"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:text="@string/function_get_time" />

    <Button
        android:id="@+id/btnTransferFinished"
        style="@style/BtnDefaultStyle"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:text="@string/function_transfer_finished" />


</LinearLayout>